--- a/README
+++ b/README
@@ -1,10 +1,3 @@
-Projeto com boas práticas de testes unitários.
+Projeto com alguns exemplos de testes usando o padrão Object Mother
 
-Exemplos com:
-- object mother
-- mockito
-- selenium
-- stubs
-- junit
-
-obs: Boa parte da estrutura aprendi com o @jonasabreu, vocês vão encontrar referências de algumas classes que ele criou.
+- Em junho desse ano citei essa pattern na minha palestra no Agile Brazil, algumas pessoas ficaram curiosas e prometi que criaria um projeto com alguns exemplos para facilitar o entendimento, apesar da demora, ele esta aqui.
